--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "actioncable": "^5.2.6",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-localstorage": "^3.5.3",
+    "sass": "^1.35.2",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "use-socket.io-client": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
