--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tinder-card": "^1.4.5",
     "react-use-localstorage": "^3.5.3",
     "sass": "^1.35.2",
     "socket.io": "^4.1.3",
