--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "react-use-localstorage": "^3.5.3",
     "sass": "^1.35.2",
+    "sinon": "^13.0.1",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "use-socket.io-client": "^1.1.0",
@@ -42,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0"
   }
 }
